# octconv_cnn

./: .gitignore  pyproject.toml
image/words/letters/whiteLetters_border10/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_blur(3,3)/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_dilateRect(2,2)2/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_resize28/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_resize28_blur(3,3)/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_resize28_dilateElli(2,2)1/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_resize28_dilateElli(2,2)2/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_resize28_dilateRect(2,2)1/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_resize28_dilateRect(2,2)1_blur(3,3)/: database.csv  infos.txt
image/words/letters/whiteLetters_border10_resize28_dilateRect(2,2)2/: database.csv  infos.txt  statistics.txt
image_classification/: __init__.py  octconv.py  resnet.py  resnet50_cifar10_training.py  scratchCNN_cifar10_training.py  scratch_cnn.py  training_CIFAR10.ipynb
