[project]
name = "image-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "LucasAbsalao",email = "lsa4@cin.ufpe.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
